--- a/custom_components/acwd/manifest.json
+++ b/custom_components/acwd/manifest.json
@@ -4,7 +4,7 @@
   "codeowners": ["@funkadelic"],
   "config_flow": true,
   "documentation": "https://github.com/funkadelic/acwd_usage",
-  "integration_type": "hub",
+  "integration_type": "service",
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/funkadelic/acwd_usage/issues",
   "requirements": [
