fix: add recorder dependency to manifest.json
The integration uses the recorder component for statistics import,
which needs to be declared in the manifest dependencies.

--- a/custom_components/acwd/manifest.json
+++ b/custom_components/acwd/manifest.json
@@ -3,6 +3,7 @@
   "name": "ACWD Water Usage",
   "codeowners": ["@funkadelic"],
   "config_flow": true,
+  "dependencies": ["recorder"],
   "documentation": "https://github.com/funkadelic/acwd_usage",
   "integration_type": "service",
   "iot_class": "cloud_polling",
