--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,14 +7,6 @@ on:
         description: 'Version number (e.g., 1.0.1)'
         required: true
         type: string
-      release_type:
-        description: 'Release type'
-        required: true
-        type: choice
-        options:
-          - patch
-          - minor
-          - major
 
 jobs:
   release:
@@ -28,34 +20,50 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Update manifest.json version
+      - name: Validate version format
+        env:
+          VERSION: ${{ inputs.version }}
         run: |
-          sed -i 's/"version": ".*"/"version": "${{ inputs.version }}"/' custom_components/acwd/manifest.json
+          if ! echo "$VERSION" | grep -Eq '^[0-9]+\.[0-9]+\.[0-9]+$'; then
+            echo "Error: Version must be in format X.Y.Z (e.g., 1.0.1)"
+            exit 1
+          fi
+
+      - name: Update manifest.json version
+        env:
+          VERSION: ${{ inputs.version }}
+        run: |
+          sed -i "s/\"version\": \".*\"/\"version\": \"$VERSION\"/" custom_components/acwd/manifest.json
 
       - name: Move Unreleased to version in CHANGELOG
+        env:
+          VERSION: ${{ inputs.version }}
         run: |
           DATE=$(date +%Y-%m-%d)
-          sed -i "s/## \[Unreleased\]/## [Unreleased]\n\n## [${{ inputs.version }}] - $DATE/" CHANGELOG.md
+          sed -i "s/## \[Unreleased\]/## [Unreleased]\n\n## [$VERSION] - $DATE/" CHANGELOG.md
 
           # Update comparison links at bottom
-          sed -i "s|\[Unreleased\]:.*|[Unreleased]: https://github.com/funkadelic/ha-acwd/compare/v${{ inputs.version }}...HEAD\n[${{ inputs.version }}]: https://github.com/funkadelic/ha-acwd/releases/tag/v${{ inputs.version }}|" CHANGELOG.md
+          sed -i "s|\[Unreleased\]:.*|[Unreleased]: https://github.com/funkadelic/ha-acwd/compare/v$VERSION...HEAD\n[$VERSION]: https://github.com/funkadelic/ha-acwd/releases/tag/v$VERSION|" CHANGELOG.md
 
       - name: Commit version bump
+        env:
+          VERSION: ${{ inputs.version }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add custom_components/acwd/manifest.json CHANGELOG.md
-          git commit -m "chore: bump version to ${{ inputs.version }}"
+          git commit -m "chore: bump version to $VERSION"
           git push
 
       - name: Create GitHub Release
         uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ inputs.version }}
         with:
-          tag_name: v${{ inputs.version }}
-          release_name: v${{ inputs.version }}
+          tag_name: v${{ env.VERSION }}
+          release_name: v${{ env.VERSION }}
           body: |
-            See [CHANGELOG.md](https://github.com/funkadelic/ha-acwd/blob/v${{ inputs.version }}/CHANGELOG.md) for details.
+            See [CHANGELOG.md](https://github.com/funkadelic/ha-acwd/blob/v${{ env.VERSION }}/CHANGELOG.md) for details.
           draft: false
           prerelease: false
